<resources>
    <string name="app_name">TechTatva 15</string>
    <string name="no_connection_one">Oops! Could not fetch content!</string>
    <string name="hello_world">Hello world!</string>
    <string name="open">Open</string>
    <string name="action_image_save">Save Image</string>
    <string name="action_image_share">Share</string>
    <string name="close">Close</string>
    <string name="text_retry">Retry</string>
    <string name="try_again">Seems like a network issue\nPlease try again in sometime!</string>
    <string name="action_settings">Settings</string>
    <string name="instafeed">InstaFeed</string>
    <string name="developers">Developers</string>
    <string name="contact">Contact Us</string>
    <string name="result">Results</string>
    <string name="drawer_closed">Close</string>
    <string name="drawer_open">Open</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="team_lead">Team Lead</string>
    <string name="kartik">Kartik Arora</string>
    <string name="anuraag">Anuraag Baishya</string>
    <string name="saketh">Saketh Kaparthi</string>
    <string name="yash">Yash Kumar Lal</string>
    <string name="sushant">Sushant Gakhar</string>
    <string name="manoj">Manoj Bhat</string>
    <string name="samarth">Samarth Jain</string>
    <string name="rohil">Rohil Vijaywargiya</string>
    <string name="mayank">Mayank Bansal</string>
    <string name="android">Android Developer</string>
    <string name="ios">iOS Developer</string>
    <string name="graphics">Graphics Designer</string>
    <string name="coordinator">Co-Ordinator</string>
    <string name="windows">Windows Phone Developer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_event_search">EventSearchActivity</string>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_robo_result">Robowars Results</string>
    <string name="title_activity_image" />
    <string name="title_activity_insta_feed">#techtatva15</string>
    <string name="shake">Shake to go back</string>
    <string name="lug_manipal">LUG Manipal</string>
    <string name="title_activity_all_events">AllEvents</string>
    <string-array name="category">
        <item>All Events</item>
        <item>Featured Events</item>
        <item>Acumen</item>
        <item>Airborne</item>
        <item>Alacrity</item>
        <item>Bizzmaestro</item>
        <item>Cheminova</item>
        <item>Constructure</item>
        <item>Cryptoss</item>
        <item>Electrific</item>
        <item>Energia</item>
        <item>Epsilon</item>
        <item>Kraftwagen</item>
        <item>Mechanize</item>
        <item>Mechatron</item>
        <item>Robotrek</item>
        <item>Turing</item>
        <item>Gaming</item>
    </string-array>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_about_us">About TechTatva</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="noevent">No Event Found!</string>
    <string name="title_activity_developer_detail">TechTatva\'15 Developers</string>
    <string name="title_activity_easter_egg">Easter Egg</string>
</resources>