<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/devimg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chipset.revels.activities.LUGActivity">

    <ImageView
        android:id="@+id/realshit_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/realshit" />

    <TextView
        android:id="@+id/realshit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/realshit_image_view"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:padding="16dp"
        android:text="@string/lug_manipal"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/realshit_text_view"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed"
        android:padding="16dp"
        android:text="@string/shake"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="25sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lug_github_image_view"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/octo" />

        <ImageView
            android:id="@+id/lug_fb_image_view"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fb" />
    </LinearLayout>

</RelativeLayout>
